# Keybinder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  format.sh  install_qt.bat  keymap.cpp  keymap.h  main.cpp  mapper.cpp  mapper.h  resources.qrc  start.bat  startup.cpp  startup.h
.github/workflows/: build.yml  format.yml  release.yml
common/: CMakeLists.txt
common/include/: abstract_daemon.h  abstract_signal_handler.h  bi_map.h  event.h  generic_indicator.h  key_channel.h  key_code.h  key_counter.h  key_map.h  layer_indicator.h  local_server.h  logger.h  mapper.h  profile.h  read_profile.cpp  read_profile.h  readprofile.h  settings.h  socket.h  startup.h  state_machine.h  temp_file_manager.h  tray.h  util.h
common/src/: daemon.h  generic_indicator.cpp  key_channel.cpp  key_code.cpp  key_counter.cpp  key_map.cpp  layer_indicator.cpp  local_server.cpp  logger.cpp  main.cpp  mapper.cpp  read_profile.cpp  readprofile.cpp  settings.cpp  socket.cpp  startup.cpp  state_machine.cpp  temp_file_manager.cpp  tray.cpp  util.cpp
exampleProfiles/: a_to_b.json  appControls.json  app_focused.json  app_focused_2.json  app_launch.json  e1.json  e2.json  e3.json  e4.json  example.json  numberpad.json  q_double_tap_to_t.json
linux/: CMakeLists.txt  linux_configure.h  linux_deamon.h
linux/include/: daemon.h  device_manager.h  key_map.h  linux_configure.h  signal_handler.h
linux/learning/: Detection.cpp  SimpleRemap.cpp  SimpleRemap.h
linux/src/: daemon.cpp  device_manager.cpp  key_map.cpp  linux_configure.cpp  signal_handler.cpp
mac/: CMakeLists.txt
mac/include/: app_focus_listener.h  daemon.h  key_map.h  signal_handler.h
mac/src/: app_focus_listener.cpp  daemon.cpp  key_map.cpp  signal_handler.cpp
profileInterpreter/: profile.h  readprofile.cpp  readprofile.h
tests/: CMakeLists.txt
tests/include/: daemon.h  test_util.h
tests/src/: basic_mapper_tests.cpp  daemon.cpp  profile_parsing.cpp  sequence_mapper_tests.cpp  sequence_mapper_timed_tests.cpp  test_main.cpp  test_util.cpp
ubuntu/: linux_configure.cpp  linux_configure.h  linux_deamon.cpp  linux_deamon.h
ubuntu/learning/: Detection.cpp  README.md  SimpleRemap.cpp
unix/: CMakeLists.txt
unix/include/: script_runner.h  signal_handler.h
unix/src/: script_runner.cpp  signal_handler.cpp
win/: CMakeLists.txt  deamon.cpp  deamon.h
win/include/: app_cache.h  daemon.h  key_map.h  script_runner.h  signal_handler.h
win/src/: app_cache.cpp  daemon.cpp  key_map.cpp  script_runner.cpp  signal_handler.cpp
